Fixed several bugs related to product price on mobile pages

--- a/src/app/feature/components/product-mobile/product-mobile.component.less
+++ b/src/app/feature/components/product-mobile/product-mobile.component.less
@@ -56,16 +56,18 @@
   }
 }
 .product-detail-container{
-  padding: 0.5rem;
+  padding: 0 0 1rem 0.5rem;
 }
 .brand-name{
   font-size: 12px;
+   color: rgb(96, 96, 96);;
 }
 .product-name{
-  font-size: 14px;
+  font-size: 12px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: rgb(12, 28, 49);
 }
 .prices {
   bottom: 0;
@@ -77,4 +79,7 @@
     color: @product-price;
     margin-right: 0.5rem;
   }
+}
+.font-size-14{
+  font-size: 14px;
 }
